--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Login Page</title>
   </head>
   <body>
-    <h2>Login with WordPress</h2>
+    <h2>Login</h2>
     <form id="loginForm">
       <input type="text" id="username" placeholder="Username" required />
       <input type="password" id="password" placeholder="Password" required />
